hphp/hack/test/typecheck/while_cond3.php
<?hh // strict
/**
 * Copyright (c) 2014, Facebook, Inc.
 * All rights reserved.
 *
 * This source code is licensed under the BSD-style license found in the
 * LICENSE file in the "hack" directory of this source tree. An additional grant
 * of patent rights can be found in the PATENTS file in the same directory.
 *
 */

function foo(?int $x): void {
  while(!is_null($x)) {
    $x += 1;
    $x = null;
  }

  $x += 5;
}
